syntax = "proto3";

package com.road.yishi.proto.extrajob;

message ExtraJobReqMsg {
  int32 op = 1;
  int32 jobType = 2;
}
